# Chicken_Disease_Classification_DL

./: LICENSE  README.md  Template.py  main.py  params.yaml  pyproject.toml
config/: config.yaml
research/: base_model.ipynb  callbacks.ipynb  data_ingestion.ipynb  training_model.ipynb  trials.ipynb
src/cnnClassifier/: __init__.py
src/cnnClassifier/components/: prepare_callbacks.py
src/cnnClassifier/config/: configuration.py
src/cnnClassifier/pipeline/: stage_1_data_ingestion.py  stage_2_prepare_base_model.py
